2020-11-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process): Do not test
	remote pty on MS Windows.

2020-11-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp--test-share-p): New defun.
	(tramp-test05-expand-file-name-relative): Use it.

2020-10-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.3 released.

2020-10-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test29-start-file-process): Extend test.

2020-10-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test32-shell-command-dont-erase-buffer):
	Adapt test.  Tag it :unstable.

2020-09-04  Eli Zaretskii  <eliz@gnu.org>

	Fix 'expand-file-name' for remote files

	* tramp-tests.el (tramp-test05-expand-file-name): No need to
	expect different results in Emacs 28 and later.

2020-08-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.2 released.

2020-08-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test05-expand-file-name)
	(tramp-test05-expand-file-name-relative): Adapt tests.
	(tramp--test-emacs28-p): New defun.

2020-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Accept alternative
	signal return string.

2020-07-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4.1 released.

2020-06-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.4 released.

2020-05-29  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.5 released.

2020-05-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.

2020-05-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-tests.el (tramp-test28-process-file): Adapt test.
