@@ -1,3 +1,8 @@
+2020-11-28  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test11-copy-file)
+	(tramp-test12-rename-file): Do not skip for tramp-gvfs.el.
+
 2020-11-25  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test29-start-file-process): Do not test
